<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Empréstimos</string>
	<string name="sem_emprestimos">Sem empréstimos ainda.</string>
	<string name="sem_categoria">Nenhuma categoria cadastrada.</string>
	
	<string name="emprestar">Emprestar</string>
	<string name="pegar_emprestado">Pegar Emprestado</string>
	<string name="menu_devolver">Devolver/Receber</string>

	<string name="menu_inserir">Adicionar Emprestimo</string>
	<string name="menu_delete">Deletar Emprestimo</string>
	<string name="item">Item</string>

	<string name="contato">Emprestar Para:</string>
	<string name="pegar_emprestado_de">Pegar Emprestado de:</string>

	<string name="menu_inserirCategoria">Adicionar Categoria</string>
	<string name="menu_deleteCategoria">Deletar Categoria</string>
	
	<string name="categoria">Categoria:</string>
	<string name="ListaCategoria">Categorias</string>

	<string name="descricao">Descrição</string>
	<string name="confirmar">Confirmar</string>
	<string name="editar_emprestimo">Editar Emprestimo</string>
	<string name="data_devolucao">Data da Devolução</string>
	<string name="hora_devolucao">Hora da Devolução</string>
	
	<string name="notificacao">Empréstimo a Receber/Devolver</string>
	
	<string name="preencher_descricao">Preencha a descrição!</string>
	<string name="excluido_com_sucesso">Excluído com sucesso!</string>
	<string name="nao">Não</string>
	<string name="sim">Sim</string>

	<string name="emprestimo_com_esta_categoria"> empréstimo(s) com esta categoria ?</string>
	<string name="deseja_excluir_esta_categoria">Deseja excluir esta categoria e \n </string>
	<string name="exclusao">Exclusão</string>
	
	<string name="esta_categoria_nao_pode_ser_excluida">Esta categoria não pode ser excluída!</string>
	<string name="nome_do_item_deve_ser_informado">O nome do item deve ser informado!</string>
	    
	<string name="data_hora_devem_ser_informados">Data/Hora devem ser maiores que a data/hora atuais</string>
	<string name="hora_de_devolver">Hora de devolver o item </string>
	<string name="ja_recebeu_item">Já recebeu o item </string>
	<string name="de_volta"> de volta?</string>
	<string name="ativar_alarme">Ativar alarme</string>
	<string name="outro_contato">Outro Contato</string>
	<string name="cancelar">Cancelar</string>
	<string name="descricao_categoria_ja_existe">Já existe uma categoria com esta descrição</string>
	
	    <!-- 

	    <string name=""></string>
	    <string name=""></string>
	    <string name=""></string>
	    <string name=""></string>-->
	

	    

</resources>
