<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EditItemView"
	android:fillViewport="true"
	style="@style/FillFill.Layout">
	<LinearLayout
		android:orientation="vertical"
		style="@style/FillFill.Layout">
	
		<RadioGroup
			android:id="@+id/rg_perguntas"
			style="@style/FillWrap"
			android:gravity="center"
			android:orientation="horizontal">
			
		  	<RadioButton 
				android:id="@+id/rb_emprestar"
				android:gravity="center"
				style="@style/WrapWrap.RadioButton"
				android:paddingRight="20sp"
				android:checked="true"
				android:textColor="@android:color/black"
		    	android:text="@string/emprestar" />
		    	
			<RadioButton
				android:id="@+id/rb_pegar_emprestado"
				android:gravity="center"
				style="@style/WrapWrap.RadioButton"
				android:paddingRight="20sp"
				android:textColor="@android:color/black"
				android:text="@string/pegar_emprestado" />
		</RadioGroup>
		
		<TextView
			style="@style/FillWrap.TextView"
			android:textColor="@android:color/black"
			android:text="@string/item" />
		<EditText
			android:id="@+id/et_item" 
		 	style="@style/FillWrap.EditText"
			android:singleLine="true" />
	
		<TextView 
			style="@style/FillWrap.TextView" 
			android:textColor="@android:color/black"
			android:text="@string/descricao" />
			
		<EditText
			android:id="@+id/et_descricao"
			style="@style/FillWrap.EditText"
			android:scrollbars="vertical" />
		
		<TextView 
			android:id="@+id/tv_contato"
			style="@style/FillWrap.TextView" 
			android:text="@string/contato" />
		
		<Spinner
			style="@style/FillWrap.Spinner"
			android:id="@+id/sp_auto_nome"
			android:inputType="text"/>
			
		<EditText
			android:id="@+id/et_contato"
			style="@style/FillWrap.EditText"
			android:scrollbars="vertical" />
	
		<CheckBox android:text="@string/outro_contato" 
			style="@style/WrapWrap.CheckBox"
			android:id="@+id/cb_contato" />

		<TextView 
			android:id="@+id/tv_categoria"
			style="@style/FillWrap.TextView"
			android:text="@string/categoria" />
		
		<Spinner
			style="@style/FillWrap.Spinner"
			android:id="@+id/sp_categoria"/>
						
		<CheckBox 
			android:id="@+id/cb_alarme"
			style="@style/WrapWrap.CheckBox"
			android:text="@string/ativar_alarme"		
		/>
		<TextView 
			style="@style/FillWrap.TextView"
			android:text="@string/data_devolucao" />
			
	   	<EditText 
			android:id="@+id/et_data"
			android:gravity="center_horizontal"
			style="@style/FillWrap.EditText.NoFocus"/>
	
		<TextView 
			style="@style/FillWrap.TextView"
			android:text="@string/hora_devolucao" />
			
	   	<EditText 
			android:id="@+id/et_hora"
			android:gravity="center_horizontal"
			style="@style/FillWrap.EditText.NoFocus"/>
	
		<Button
			android:id="@+id/btn_confirmar" 
		  	android:text="@string/confirmar"
			style="@style/WrapWrap"/>
	
	</LinearLayout>
</ScrollView>